--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <head>
 
-<title>The Institution</title>
+<title>Help me choose a name for this institute</title>
 <meta name="description" content="Rising from the ashes!">
 <meta name="keywords" content="atmospheric science, applied mathematics,
 remote sensing, science research, charitable foundation, research and educational charity">
@@ -26,16 +26,13 @@ remote sensing, science research, charitable foundation, research and educationa
 
 <body>
 
-<img src="logo.png" width=480>
+<img src="logo2a.png">
 
 
 <h1>Free software</h1>
 
 <ul>
-<li><a href="http://libagf.sourceforge.net">libAGF</a>: adaptive Gaussian filtering</li>
-<li><a href="http://ctraj.sourceforge.net">CTraj</a>: C++ trajectory modelling</li>
-<li><a href="http://msci.sourceforge.net">msci</a>: miscellaneous projects</li>
-<li><a href="https://github.com/Peteysoft/sea_ice">sea ice</a> emissivity modelling software</li>
+<li><a href="https://github.com/Peteysoft/">sea ice</a> Free software on github</li>
 </ul>
 
 <h1>Publications</h1>
