--- a/index.html
+++ b/index.html
@@ -2,25 +2,9 @@
 <head>
 
 <title>Help me choose a name for this institute</title>
-<meta name="description" content="Rising from the ashes!">
+<meta name="description" content="An institute for pure and applied science.">
 <meta name="keywords" content="atmospheric science, applied mathematics,
 remote sensing, science research, charitable foundation, research and educational charity">
-
-<script src="http://peteysoft.sourceforge.net/gatag.js" type="text/javascript"></script>
-
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-22323290-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
 
 </head>
 
@@ -32,7 +16,7 @@ remote sensing, science research, charitable foundation, research and educationa
 <h1>Free software</h1>
 
 <ul>
-<li><a href="https://github.com/Peteysoft/">sea ice</a> Free software on github</li>
+	<li><a href="https://github.com/Peteysoft/">Free software on github</a></li>
 </ul>
 
 <h1>Publications</h1>
@@ -40,29 +24,29 @@ remote sensing, science research, charitable foundation, research and educationa
 <h2>Peer reviewed</h2>
 
 <ul>
-        <li><b>Peter Mills</b> (2011). <a href="01431161.2010.pdf"
-        onclick="_gaq.push(['_trackEvent', 'Papers', 'AGF']);">"Efficient statistical classification of satellite measurements."</a>
+	<li><b>Peter Mills</b> (2011). "Efficient statistical classification of satellite measurements"
 <i>International Journal of Remote Sensing</i>, <b>32</b> (21): 6109-6132.
 <a href="http://dx.doi.org/10.1080/01431161.2010.507795">doi: 10.1080/01431161.2010.507795</a>; <a href="http://arxiv.org/abs/1202.2194">arXiv: 1202.2194v1</a></li>
 
   <li><b>Peter Mills</b> and Georg Heygster (2011).
-  <a href="smos_concentration_ieee.pdf" onclick="_gaq.push(['_trackEvent', 'Papers', 'Ice concentration']);">"Retrieving ice concentration from SMOS."</a>
+  <a href="http://www.researchgate.net/publication/224176428_Retrieving_Ice_Concentration_From_SMOS">"Retrieving sea ice concentration from SMOS"</a>
   <i>IEEE Geoscience and Remote Sensing Letters</i>, <b>8</b> (2): 283-287.
   <a href="http://dx.doi.org/10.1109/LGRS.2010.2064157">doi: 10.1109/LGRS.2010.2064157</a>
   </li>
 
   <li><b>Peter Mills</b> and Georg Heygster (2011).
-  <a href="smos_ieee.pdf" _gaq.push(['_trackEvent', 'Papers', 'Ice emissivity']>"Sea ice emissivity modelling at L-band and application to Pol-Ice 2007 campaign field data."</a>
+  <a href="http://www.researchgate.net/publication/224182014_Sea_Ice_Emissivity_Modeling_at_L-Band_and_Application_to_2007_Pol-Ice_Campaign_Field_Data">"Sea ice emissivity modelling
+at L-band and application to 2007 Pol-Ice campaign field data."</a>
   <i>IEEE Transactions on Geoscience and Remote Sensing</i>, <b>49</b> (2): 612-627.
-      <a href="http://dx.doi.org/10.1109/TGRS.2010.2060729" onclick="_gaq.push(['_trackEvent', 'Papers', 'Ice emissivity']);">doi: 10.1109/TGRS.2010.2060729</a>
+  <a href="http://dx.doi.org/10.1109/TGRS.2010.2060729">doi:10.1109/TGRS.2010.2060729</a>
       </li>
 
-      <li><b>Peter Mills</b> (2009). <a href="Mills2009.pdf" onclick="_gaq.push(['_trackEvent', 'Papers', 'Isoline retrieval']);">"Isoline retrieval: An optimal sounding method for validation of advected contours."</a>
+      <li><b>Peter Mills</b> (2009). "Isoline retrieval: An optimal sounding method for validation of advected contours."
       <i>Computers & Geosciences</i> <b>35</b> (11): 2020-2031.
       <a href="http://dx.doi.org/10.1016/j.cageo.2008.12.015">doi: 10.1016/j.cageo.2008.12.015.</a>
       <a href="http://arxiv.org/abs/1202.5659">arxiv:1202.5659v1.</a></li>
 
-      <li><b>Peter Mills</b> (2006), <a href="Mills2006.pdf" onclick="_gaq.push(['_trackEvent', 'Papers', 'Chaotic scattering']);">"The influence of noise on a classical chaotic scatterer."</a>
+      <li><b>Peter Mills</b> (2006), "The influence of noise on a classical chaotic scatterer."
       <i>Communications in Nonlinear Science and Numerical Simulation</i>
       <b>11</b> (8) 899-906.<a href="http://dx.doi.org/10.1016/j.cnsns.2005.02.003">doi: 10.1016/j.cnsns.2005.02.003</a></li>
 
@@ -71,11 +55,11 @@ remote sensing, science research, charitable foundation, research and educationa
 <h2>Technical reports</h2>
 
 <ul>
-        <li><b>Peter Mills</b> and Georg Heygster (2011). <a href="tstudy.pdf" onclick="_gaq.push(['_trackEvent', 'Papers', 'tstudy']);">"Sea Ice Brightness Temperature as a Function of Ice Thickness: Computed Curves for AMSR-E and SMOS (frequencies from 1.4 to 89 GHz)."</a>
-        Final report for DFG project HE-1746-15.
+        <li><b>Peter Mills</b> and Georg Heygster (2011). "Sea Ice Brightness Temperature as a Function of Ice Thickness: Computed Curves for AMSR-E and SMOS (frequencies from 1.4 to 89 GHz)." 
+	Final report for DFG project HE-1746-15.
         <a href="http://arxiv.org/abs/1202.3802">arxiv:1202.3802v1</a></li>
       <li>Georg Heygster, Stefan Hendricks, Lars Kaleschke, Nina Maass, <b>Peter Mills</b>, Detlef Stammer, Rasmus Tonboe, and Christian Haas (2009).
-      <a href="http://www.iup.uni-bremen.de/iuppage/psa/documents/smos_final.pdf" onclick="_gaq.push(['_trackEvent', 'Papers', 'SMOS-Ice final']);">
+      <a href="http://www.iup.uni-bremen.de/iuppage/psa/documents/smos_final.pdf"> 
               <i>L-Band Radiometry for Sea-Ice Applications.</i></a>
       Final report for ESA/ESTEC Contract 21130/08/NL/EL, Institute of Environmental Physics, University of Bremen, Bremen, Germany.</li>
 </ul>
@@ -85,14 +69,12 @@ remote sensing, science research, charitable foundation, research and educationa
 For articles in the <a href="http://arxiv.org">arXiv database</a> that have also been published elsewhere, see individual entries for the link and object identifier.
 
 <ul>
-        <li><b>Peter Mills</b> (2014). <a href="http://arxiv.org/abs/1404.4095" onclick="_gaq.push(['_trackEvent', 'Papers', 'multi-borders']);">"Multi-borders classification."</a> arXiv:1404.4095v3</li>
-        <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.6567" onclick="_gaq.push(['_trackEvent', 'Papers', 'tstudy2']);">"Sea Ice Brightness Temperature as a Function of Ice Thickness, Part II: Computed curves for thermodynamically modelled ice profiles."</a> arXiv:1202.6567v1</li>
-        <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.4095" onclick="_gaq.push(['_trackEvent', 'Papers', 'Fresh water ice']);">"Microwave emissivity of fresh water ice--Lake ice and Antarctic ice pack--Radiative transfer simulations versus satellite radiances."</a> arXiv:1202.4095v1</li>
-        <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.1999" onclick="_gaq.push(['_trackEvent', 'Papers', 'PC proxy']);">"Principal component proxy tracer analysis"</a>
-        Posted to arXiv manuscript database: arXiv:1202.2194v1.  A more in-depth study will be submitted to <i>Atmospheric Environment</i> very shortly.  For the review of this version, <a href="pc_proxy_ae_review.txt">click here</a>.</li>
+        <li><b>Peter Mills</b> (2014). <a href="http://arxiv.org/abs/1404.4095" >"Multi-borders classification."</a> arXiv:1404.4095v3</li>
+        <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.6567">"Sea Ice Brightness Temperature as a Function of Ice Thickness, Part II: Computed curves for thermodynamically modelled ice profiles."</a> arXiv:1202.6567v1</li>
+        <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.4095">"Microwave emissivity of fresh water ice--Lake ice and Antarctic ice pack--Radiative transfer simulations versus satellite radiances."</a> arXiv:1202.4095v1</li>
+        <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.1999">"Principal component proxy tracer analysis"</a>
+        Posted to arXiv manuscript database: arXiv:1202.2194v1.</li>
 </ul>
-
-<h1><a href="http://sourceforge.net/donate/?user_id=1828999">Donate</a></h1>
 
 <a href="http://notationalshorthand.blogspot.com"><h1>Blog</h1></a>
 
