Added "matrix analysis" paper. Removed version numbers from arxiv references.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ remote sensing, science research, charitable foundation, research and educationa
 <ul>
 	<li><b>Peter Mills</b> (2011). "Efficient statistical classification of satellite measurements"
 <i>International Journal of Remote Sensing</i>, <b>32</b> (21): 6109-6132.
-<a href="http://dx.doi.org/10.1080/01431161.2010.507795">doi: 10.1080/01431161.2010.507795</a>; <a href="http://arxiv.org/abs/1202.2194">arXiv: 1202.2194v1</a></li>
+<a href="http://dx.doi.org/10.1080/01431161.2010.507795">doi: 10.1080/01431161.2010.507795</a>; <a href="http://arxiv.org/abs/1202.2194">arXiv: 1202.2194</a></li>
 
   <li><b>Peter Mills</b> and Georg Heygster (2011).
   <a href="http://www.researchgate.net/publication/224176428_Retrieving_Ice_Concentration_From_SMOS">"Retrieving sea ice concentration from SMOS"</a>
@@ -44,7 +44,7 @@ at L-band and application to 2007 Pol-Ice campaign field data."</a>
       <li><b>Peter Mills</b> (2009). "Isoline retrieval: An optimal sounding method for validation of advected contours."
       <i>Computers & Geosciences</i> <b>35</b> (11): 2020-2031.
       <a href="http://dx.doi.org/10.1016/j.cageo.2008.12.015">doi: 10.1016/j.cageo.2008.12.015.</a>
-      <a href="http://arxiv.org/abs/1202.5659">arxiv:1202.5659v1.</a></li>
+      <a href="http://arxiv.org/abs/1202.5659">arxiv:1202.5659.</a></li>
 
       <li><b>Peter Mills</b> (2006), "The influence of noise on a classical chaotic scatterer."
       <i>Communications in Nonlinear Science and Numerical Simulation</i>
@@ -57,7 +57,7 @@ at L-band and application to 2007 Pol-Ice campaign field data."</a>
 <ul>
         <li><b>Peter Mills</b> and Georg Heygster (2011). "Sea Ice Brightness Temperature as a Function of Ice Thickness: Computed Curves for AMSR-E and SMOS (frequencies from 1.4 to 89 GHz)." 
 	Final report for DFG project HE-1746-15.
-        <a href="http://arxiv.org/abs/1202.3802">arxiv:1202.3802v1</a></li>
+        <a href="http://arxiv.org/abs/1202.3802">arxiv:1202.3802</a></li>
       <li>Georg Heygster, Stefan Hendricks, Lars Kaleschke, Nina Maass, <b>Peter Mills</b>, Detlef Stammer, Rasmus Tonboe, and Christian Haas (2009).
       <a href="http://www.iup.uni-bremen.de/iuppage/psa/documents/smos_final.pdf"> 
               <i>L-Band Radiometry for Sea-Ice Applications.</i></a>
@@ -69,11 +69,12 @@ at L-band and application to 2007 Pol-Ice campaign field data."</a>
 For articles in the <a href="http://arxiv.org">arXiv database</a> that have also been published elsewhere, see individual entries for the link and object identifier.
 
 <ul>
-        <li><b>Peter Mills</b> (2014). <a href="http://arxiv.org/abs/1404.4095" >"Multi-borders classification."</a> arXiv:1404.4095v3</li>
-        <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.6567">"Sea Ice Brightness Temperature as a Function of Ice Thickness, Part II: Computed curves for thermodynamically modelled ice profiles."</a> arXiv:1202.6567v1</li>
-        <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.4095">"Microwave emissivity of fresh water ice--Lake ice and Antarctic ice pack--Radiative transfer simulations versus satellite radiances."</a> arXiv:1202.4095v1</li>
+        <li><b>Peter Mills</b> (2015). <a href="http://arxiv.org/abs/1506.06984" >"Multi-borders classification."</a> arXiv:1506.06984</li>
+        <li><b>Peter Mills</b> (2014). <a href="http://arxiv.org/abs/1404.4095" >"Multi-borders classification."</a> arXiv:1404.4095</li>
+        <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.6567">"Sea Ice Brightness Temperature as a Function of Ice Thickness, Part II: Computed curves for thermodynamically modelled ice profiles."</a> arXiv:1202.6567</li>
+        <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.4095">"Microwave emissivity of fresh water ice--Lake ice and Antarctic ice pack--Radiative transfer simulations versus satellite radiances."</a> arXiv:1202.4095</li>
         <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.1999">"Principal component proxy tracer analysis"</a>
-        Posted to arXiv manuscript database: arXiv:1202.2194v1.</li>
+        Posted to arXiv manuscript database: arXiv:1202.2194.</li>
 </ul>
 
 <a href="http://notationalshorthand.blogspot.com"><h1>Blog</h1></a>
