Added new arxiv submissions.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 
 <head>
 
-<title>Help me choose a name for this institute</title>
-<meta name="description" content="An institute for pure and applied science.">
+<title>The Institution</title>
 <meta name="keywords" content="atmospheric science, applied mathematics,
 remote sensing, science research, charitable foundation, research and educational charity">
 
@@ -69,6 +68,10 @@ at L-band and application to 2007 Pol-Ice campaign field data."</a>
 For articles in the <a href="http://arxiv.org">arXiv database</a> that have also been published elsewhere, see individual entries for the link and object identifier.
 
 <ul>
+        <li><b>Peter Mills</b> (2017). <a href="http://arxiv.org/abs/1708.05917">"Accelerating Kernel Classifiers Through Borders Mapping"</a>
+        arXiv:1708.05917.</li>
+        <li><b>Peter Mills</b> (2017). <a href="http://arxiv.org/abs/1708.05914">"PC proxy: A New Method of Dynamical Tracer Reconstruction"</a>
+        arXiv:1708.05914.</li>
         <li><b>Peter Mills</b> (2015). <a href="http://arxiv.org/abs/1506.06984" >"Matrix Analysis of Tracer Transport."</a> arXiv:1506.06984</li>
         <li><b>Peter Mills</b> (2014). <a href="http://arxiv.org/abs/1404.4095" >"Multi-borders classification."</a> arXiv:1404.4095</li>
         <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.6567">"Sea Ice Brightness Temperature as a Function of Ice Thickness, Part II: Computed curves for thermodynamically modelled ice profiles."</a> arXiv:1202.6567</li>
