Added new publications.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@ remote sensing, science research, charitable foundation, research and educationa
 <h2>Peer reviewed</h2>
 
 <ul>
+	<li><b>Peter Mills</b> (2018). <a href="https://rdcu.be/2YPa">"PC proxy: a method for dynamical tracer reconstruction"</a>
+<i>Environmental Fluid Mechanics</i>.
+<a href="http://dx.doi.org/10.1007/s10652-018-9615-7">doi: 10.1007/s10652-018-9615-7</a>.
+
+<li><b>Peter Mills</b> (2018). <a href="https://rdcu.be/KM46">"Accelerating kernel classifiers through borders mapping"</a>
+<i>Real-Time Image Processing</i>.
+<a href="http://dx.doi.org/10.1007/s11554-018-0769-9">doi: 10.1007/s11554-018-0769-9</a>.
+
 	<li><b>Peter Mills</b> (2011). "Efficient statistical classification of satellite measurements"
 <i>International Journal of Remote Sensing</i>, <b>32</b> (21): 6109-6132.
 <a href="http://dx.doi.org/10.1080/01431161.2010.507795">doi: 10.1080/01431161.2010.507795</a>; <a href="http://arxiv.org/abs/1202.2194">arXiv: 1202.2194</a></li>
@@ -42,7 +50,7 @@ at L-band and application to 2007 Pol-Ice campaign field data."</a>
 
       <li><b>Peter Mills</b> (2009). "Isoline retrieval: An optimal sounding method for validation of advected contours."
       <i>Computers & Geosciences</i> <b>35</b> (11): 2020-2031.
-      <a href="http://dx.doi.org/10.1016/j.cageo.2008.12.015">doi: 10.1016/j.cageo.2008.12.015.</a>
+      <a href="http://dx.doi.org/10.1016/j.cageo.2008.12.015">doi: 10.1016/j.cageo.2008.12.015</a>;
       <a href="http://arxiv.org/abs/1202.5659">arxiv:1202.5659.</a></li>
 
       <li><b>Peter Mills</b> (2006), "The influence of noise on a classical chaotic scatterer."
