--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@ at L-band and application to 2007 Pol-Ice campaign field data."</a>
 For articles in the <a href="http://arxiv.org">arXiv database</a> that have also been published elsewhere, see individual entries for the link and object identifier.
 
 <ul>
+        <li><b>Peter Mills</b> (2018). <a href="http://arxiv.org/abs/1809.05929">"Solving for multi-class: a survey and synthesis"</a>
+		arXiv:1809.05929</li>
+        <li><b>Peter Mills</b> (2018). <a href="http://arxiv.org/abs/1801.09055">"Solving for multi-class using orthogonal coding matrices"</a>
+		arXiv:1801.05055</li>
         <li><b>Peter Mills</b> (2017). <a href="http://arxiv.org/abs/1708.05917">"Accelerating Kernel Classifiers Through Borders Mapping"</a>
         arXiv:1708.05917.</li>
         <li><b>Peter Mills</b> (2017). <a href="http://arxiv.org/abs/1708.05914">"PC proxy: A New Method of Dynamical Tracer Reconstruction"</a>
