Updated journal ref.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ remote sensing, science research, charitable foundation, research and educationa
 
 <ul>
 	<li><b>Peter Mills</b> (2018). <a href="https://rdcu.be/2YPa">"PC proxy: a method for dynamical tracer reconstruction"</a>
-<i>Environmental Fluid Mechanics</i>.
+		<i>Environmental Fluid Mechanics</i> <b>18</b>(6): 1533-1558.
 <a href="http://dx.doi.org/10.1007/s10652-018-9615-7">doi: 10.1007/s10652-018-9615-7</a>.
 
 <li><b>Peter Mills</b> (2018). <a href="https://rdcu.be/KM46">"Accelerating kernel classifiers through borders mapping"</a>
