--- a/index.html
+++ b/index.html
@@ -89,8 +89,13 @@ For articles in the <a href="http://arxiv.org">arXiv database</a> that have also
         <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.6567">"Sea Ice Brightness Temperature as a Function of Ice Thickness, Part II: Computed curves for thermodynamically modelled ice profiles."</a> arXiv:1202.6567</li>
         <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.4095">"Microwave emissivity of fresh water ice--Lake ice and Antarctic ice pack--Radiative transfer simulations versus satellite radiances."</a> arXiv:1202.4095</li>
         <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.1999">"Principal component proxy tracer analysis"</a>
-        arXiv:1202.2194.</li>
+        arXiv:1202.1999.</li>
 </ul>
+
+<h1>Contact</h1>
+
+Peter Mills
+peteymills(at)hotmail.com
 
 <a href="http://notationalshorthand.blogspot.com"><h1>Blog</h1></a>
 
