Added social media links.

--- a/index.html
+++ b/index.html
@@ -94,8 +94,12 @@ For articles in the <a href="http://arxiv.org">arXiv database</a> that have also
 
 <h1>Contact</h1>
 
-Peter Mills
-peteymills(at)hotmail.com
+<b>Peter Mills</b><br>
+<br>
+e-mail: <i>peteymills(at)hotmail.com</i><br>
+google scholar: <a href="https://scholar.google.ca/citations?user=Ho1n1bgAAAAJ&hl">https://scholar.google.ca/citations?user=Ho1n1bgAAAAJ&hl</a><br>
+researchgate: <a href="https://www.researchgate.net/profile/Peter_Mills8">https://www.researchgate.net/profile/Peter_Mills8</a><br>
+linked-in: <a href="https://www.linkedin.com/in/peter-mills-6b719913/">https://www.linkedin.com/in/peter-mills-6b719913/</a>
 
 <a href="http://notationalshorthand.blogspot.com"><h1>Blog</h1></a>
 
