--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@ remote sensing, science research, charitable foundation, research and educationa
 <h2>Peer reviewed</h2>
 
 <ul>
+        <li><b>Peter Mills</b> (2019). <a href="http://arxiv.org/abs/1801.09055">"Solving for multi-class using orthogonal coding matrices"</a>
+		<i>SN Applied Sciences</i> <b>1</b>(11): 1451.
+
 	<li><b>Peter Mills</b> (2018). <a href="https://rdcu.be/2YPa">"PC proxy: a method for dynamical tracer reconstruction"</a>
 		<i>Environmental Fluid Mechanics</i> <b>18</b>(6): 1533-1558.
 <a href="http://dx.doi.org/10.1007/s10652-018-9615-7">doi: 10.1007/s10652-018-9615-7</a>.
@@ -78,12 +81,6 @@ For articles in the <a href="http://arxiv.org">arXiv database</a> that have also
 <ul>
         <li><b>Peter Mills</b> (2018). <a href="http://arxiv.org/abs/1809.05929">"Solving for multi-class: a survey and synthesis"</a>
 		arXiv:1809.05929</li>
-        <li><b>Peter Mills</b> (2018). <a href="http://arxiv.org/abs/1801.09055">"Solving for multi-class using orthogonal coding matrices"</a>
-		arXiv:1801.05055</li>
-        <li><b>Peter Mills</b> (2017). <a href="http://arxiv.org/abs/1708.05917">"Accelerating Kernel Classifiers Through Borders Mapping"</a>
-        arXiv:1708.05917.</li>
-        <li><b>Peter Mills</b> (2017). <a href="http://arxiv.org/abs/1708.05914">"PC proxy: A New Method of Dynamical Tracer Reconstruction"</a>
-        arXiv:1708.05914.</li>
         <li><b>Peter Mills</b> (2015). <a href="http://arxiv.org/abs/1506.06984" >"Matrix Analysis of Tracer Transport."</a> arXiv:1506.06984</li>
         <li><b>Peter Mills</b> (2014). <a href="http://arxiv.org/abs/1404.4095" >"Multi-borders classification."</a> arXiv:1404.4095</li>
         <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.6567">"Sea Ice Brightness Temperature as a Function of Ice Thickness, Part II: Computed curves for thermodynamically modelled ice profiles."</a> arXiv:1202.6567</li>
