--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ at L-band and application to 2007 Pol-Ice campaign field data."</a>
 For articles in the <a href="http://arxiv.org">arXiv database</a> that have also been published elsewhere, see individual entries for the link and object identifier.
 
 <ul>
-        <li><b>Peter Mills</b> (2019). <a href="http://arxiv.org/abs/1809.05929">"Optimizing class partitioning in multi-class classification using a descriptive control language."</a>
+        <li><b>Peter Mills</b> (2021). <a href="http://arxiv.org/abs/1809.05929">"Solving for multiclass: a survey and synthesis."</a>
 		arXiv:1809.05929</li>
         <li><b>Peter Mills</b> (2015). <a href="http://arxiv.org/abs/1506.06984" >"Matrix Analysis of Tracer Transport."</a> arXiv:1506.06984</li>
         <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.6567">"Sea Ice Brightness Temperature as a Function of Ice Thickness, Part II: Computed curves for thermodynamically modelled ice profiles."</a> arXiv:1202.6567</li>
