--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@ For articles in the <a href="http://arxiv.org">arXiv database</a> that have also
         <li><b>Peter Mills</b> (2012). <a href="http://arxiv.org/abs/1202.4095">"Microwave emissivity of fresh water ice--Lake ice and Antarctic ice pack--Radiative transfer simulations versus satellite radiances."</a> arXiv:1202.4095</li>
 </ul>
 
+<h1>Newsletter</h1>
+	<ul>
+		<li><a href="https://github.com/peteysoft/peteysoft.github.io/peteysoft_newsletter.pdf"</a></li>
+	</ul>
+			    
+
 <h1>Contact</h1>
 
 <b>Peter Mills</b><br>
