--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ For articles in the <a href="http://arxiv.org">arXiv database</a> that have also
 
 <h1>Newsletter</h1>
 	<ul>
-		<li><a href="https://github.com/peteysoft/peteysoft.github.io/peteysoft_newsletter.pdf"</a></li>
+		<li><a href="https://github.com/peteysoft/peteysoft.github.io/peteysoft_newsletter.pdf">December 27, 2023</a></li>
 	</ul>
 			    
 
